# test_nox

./: main.py  noxfile.py  pyproject.toml
.github/workflows/: test.yml
src/: func_310.py  func_311.py  func_312.py  func_313_plus.py  func_38.py  func_39.py
tests/: test_func_310.py  test_func_311.py  test_func_312.py  test_func_313_plus.py  test_func_38.py  test_func_39.py
