[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-nox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "nox[pbs]>=2025.11.12",
    "pytest>=8.0.1",
]
[tool.hatch.build]
sources = ["."]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.setuptools]
packages = ["src"]
